@@ -32,5 +32,6 @@ Keyboard shortcuts (in-game)
 ------------------
 
 SPACE		Toggles build-help
+M			Toggle minimap
 
 F5			Reveals the entire map
