@@ -4,3 +4,6 @@ build-2:
 - introduced System
 - added keyboard input
 - build symbols react to objects now (can't build next to stones etc...)
+- only use 8 different types of trees (like Settlers 2)
+- unique windows now reappear where they were last moved
+- improved fieldaction mouse placement for fast click-through
